Closed Bug 1902017 Opened 2 years ago Closed 2 years ago

Do not terminate a wheel transaction when scrolling over an out of process iframe - pan gestures

Categories

(Core :: Panning and Zooming, defect, P3)

defect

Tracking

()

RESOLVED FIXED
130 Branch
Tracking Status
firefox130 --- fixed

People

(Reporter: dlrobertson, Assigned: dlrobertson)

References

Details

Attachments

(1 file)

Ensure that the wheel transaction is still used when scrolling over an out of process iframe for pan gestures.

Severity: -- → S3
Priority: -- → P3
Blocks: 1901337
Assignee: nobody → drobertson

Ensure that weel events for a pan gesture are sent to the content
process for the layers id of the APZC that is handling the pan gesture.
The corresponding content process should also have a content side wheel
transaction that will ensure that content that is scrolled over cannot
halt a user scroll with preventDefault on a wheel event listener.

Depends on D212967

Pushed by drobertson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4b7b382270d0 Update the event layers id to that of the APZ pan gesture block state. r=botond
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
Duplicate of this bug: 1899921
Duplicate of this bug: 1882168
Duplicate of this bug: 1901337
Regressions: 1917488
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: