Bug 1902017 - Update the event layers id to that of the APZ pan gesture block state. r=botond

Ensure that weel events for a pan gesture are sent to the content
process for the layers id of the APZC that is handling the pan gesture.
The corresponding content process should also have a content side wheel
transaction that will ensure that content that is scrolled over cannot
halt a user scroll with preventDefault on a wheel event listener.

Differential Revision: https://phabricator.services.mozilla.com/D215143